Fix correctness bugs, unify detector API surface, harden CI (review sweep)
Correctness:
- ConcurrencyRunner: timeout on worker barrier so stranded workers exit;
  retain worker Futures and cancel(true) on round timeout; memoize
  analyzeAll() so it runs at most once per execution
- Share Phase 1/3 detector instances between Phase1DetectorSet and
  DetectorRegistry (events and analysis previously hit different instances)
- IssueSeverity.fromReport: token-based severity parsing (no more
  "critical section" -> CRITICAL, "allow" -> LOW false positives)
- SimpleDateFormatDetector: store errorType, auto-register on error
- LockLeakDetector: auto-register unseen locks instead of silent no-op
- ThreadLeakDetector: release strong Thread refs on termination
- LicenseGuard: include license.user.email in cache fingerprint
- BenchmarkRecorder: record actual thread count; avg from per-round samples
- LegacyDetectorAdapter: cache reflective Method handles in constructor

API consistency (additive only, binary-compatible):
- Replace deprecated Thread.getId() with threadId() (78 uses, 45 files)
- analyze() alias on all 17 bespoke-named detectors
- 43 correctly-named *Detector() accessors in AsyncTestContext; misnamed
  *Monitor() accessors deprecated

Infra/docs/tests:
- Detector count reconciled to 121 (pom said 111); 111 missing entries
  appended to DETECTOR_CATALOG.md
- CI: OS matrix with experimental windows/macos legs; harden-runner
  skipped off-Linux
- Javadoc doclint none -> all,-missing; fixed the 7 defects it exposed
- Flaky-test policy (no reruns) documented in pom and README
- New tests: AutoFix, VirtualThreadStressConfig, invocation interceptor
  (pins skip()-never-proceed()), IssueSeverity, Phase1DetectorSet, plus
  tests for every behavioral fix (1457 -> 1509 tests)
- docs/ROADMAP_V2.md: staged plan for the remaining API-breaking refactor

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_017whNFnxSNVEmBoox5Nc82B