@@ -98,7 +98,7 @@ public final class SharedCharsetCoderDetector {
             final String label = kind + "@" + id;
             s = instances.computeIfAbsent(id, k -> new State(label, kind));
         }
-        s.accessingThreadIds.add(thread.getId());
+        s.accessingThreadIds.add(thread.threadId());
         s.accessingThreadNames.add(thread.getName());
         if (operation != null) {
             s.operations.add(operation);
