@@ -85,7 +85,7 @@ public final class WeakHashMapSharedDetector {
                     (name != null) ? name : finalType + "@" + k,
                     finalType));
         }
-        s.accessingThreadIds.add(thread.getId());
+        s.accessingThreadIds.add(thread.threadId());
         s.accessingThreadNames.add(thread.getName());
     }
 
